Fix: match history vertical align

--- a/app/assets/stylesheets/matches.css
+++ b/app/assets/stylesheets/matches.css
@@ -1,8 +1,8 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 70px 0;
-  background-image: url('header.jpg');
+  background-image: url("header.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -51,8 +51,9 @@ tr {
 }
 /* Styles for the color boxes */
 .history-box {
-  width: 20px;
-  height: 20px;
+  vertical-align: top;
+  width: 17px;
+  height: 17px;
   display: inline-block;
   border: 1px solid #ccc;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
